Adapt sim to updated RTL

--- a/blink/sim/Makefile
+++ b/blink/sim/Makefile
@@ -1,4 +1,5 @@
 DESIGN_NAME := blink
+LIB_SRC     := ../../lib/components.vhd ../../lib/sim_components.vhd
 RTL_SRC     := ../rtl/${DESIGN_NAME}.vhd
 SIM_SRC     := tb_${DESIGN_NAME}.vhd
 VHD_STD     := 08
@@ -8,11 +9,13 @@ VHD_STD     := 08
 all: sim
 compile: tb_${DESIGN_NAME}
 
-tb_${DESIGN_NAME}: ${RTL_SRC} ${SIM_SRC} | work
+tb_${DESIGN_NAME}: ${LIB_SRC} ${RTL_SRC} ${SIM_SRC} | work
+	@echo "Analyze gatemate library ..."
+	ghdl -a --std=${VHD_STD} -fpsl --workdir=work --work=gatemate ${LIB_SRC}
 	@echo "Analyze testbench & design ..."
-	ghdl -a --std=${VHD_STD} -fpsl --workdir=work ${RTL_SRC} ${SIM_SRC}
+	ghdl -a --std=${VHD_STD} -fpsl --workdir=work -Pwork ${RTL_SRC} ${SIM_SRC}
 	@echo "Elaborate testbench & design ..."
-	ghdl -e --std=${VHD_STD} -fpsl --workdir=work $@
+	ghdl -e --std=${VHD_STD} -fpsl --workdir=work -Pwork $@
 
 sim: tb_${DESIGN_NAME}
 	@echo "Run testbench ..."
@@ -23,4 +26,4 @@ work:
 
 clean:
 	@echo "Cleaning simulation files ..."
-	rm -rf tb_${DESIGN_NAME} *.o *.json work/
+	rm -rf tb_${DESIGN_NAME} *.o work/
