--- a/blink/syn/Makefile
+++ b/blink/syn/Makefile
@@ -1,6 +1,6 @@
 DESIGN_NAME := blink
 WORK_FILES   := ../rtl/blink.vhd
-GM_FILES    := ../../lib/components.vhd
+GM_FILES    := ../../lib/rtl_components.vhd
 GHDL_FLAGS  := --std=08 --workdir=build -Pbuild
 YOSYSPIPE   := -nomx8 -luttree -retime
 PNRFLAGS    := -sp off -om 2 -cCP on
