blink & uart_reg designs are working now
* Yosys with -luttree option seems to generate Verilog
  netlist which GateMate p_r tool cannot handle correctly
* If -luttree option is used you get bitfiles with nearly
  random behaviour
* So, the Yosys -luttree option is removed to get correctly
  working designs, even that the GateMate documentation recommends
  to use the option
* Result is a design with worse timing, but it's working as
  desired :)

* Add targets to run post-synthesis & post-implementation simulations
* Add Verilog test benches for post-syn/post-imp simulations
* Remove debug code

--- a/blink/sim/Makefile
+++ b/blink/sim/Makefile
@@ -1,8 +1,8 @@
 DESIGN_NAME := blink
-LIB_SRC     := ../../lib/components.vhd ../../lib/sim_components.vhd
-RTL_SRC     := ../rtl/${DESIGN_NAME}.vhd
+LIB_SRC     := ../../lib/rtl_components.vhd ../../lib/sim_components.vhd
+RTL_SRC     := ../../lib/user_components.vhd ../rtl/${DESIGN_NAME}.vhd
 SIM_SRC     := tb_${DESIGN_NAME}.vhd
-VHD_STD     := 08
+SIM_FLAGS   := --std=08 -fpsl --workdir=work
 
 .PHONY: all compile sim clean
 
@@ -11,15 +11,15 @@ compile: tb_${DESIGN_NAME}
 
 tb_${DESIGN_NAME}: ${LIB_SRC} ${RTL_SRC} ${SIM_SRC} | work
 	@echo "Analyze gatemate library ..."
-	ghdl -a --std=${VHD_STD} -fpsl --workdir=work --work=gatemate ${LIB_SRC}
+	ghdl -a ${SIM_FLAGS} --work=gatemate ${LIB_SRC}
 	@echo "Analyze testbench & design ..."
-	ghdl -a --std=${VHD_STD} -fpsl --workdir=work -Pwork ${RTL_SRC} ${SIM_SRC}
+	ghdl -a ${SIM_FLAGS} -Pwork ${RTL_SRC} ${SIM_SRC}
 	@echo "Elaborate testbench & design ..."
-	ghdl -e --std=${VHD_STD} -fpsl --workdir=work -Pwork $@
+	ghdl -e ${SIM_FLAGS} -Pwork $@
 
 sim: tb_${DESIGN_NAME}
 	@echo "Run testbench ..."
-	ghdl -r tb_${DESIGN_NAME} --assert-level=error
+	ghdl -r ${SIM_FLAGS} -Pwork tb_${DESIGN_NAME} --assert-level=error  --wave=tb_${DESIGN_NAME}.ghw
 
 work:
 	mkdir $@
